--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,60 @@
-html, body {
-    font-size: 62,5%;
-    margin: 0;
-    padding: 0;
+/* reset */
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
+
+html,body {
+    font-size:  62.5%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    background: #171618;
+    color: #FFFFFF;
+    
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit:  contain;
+    flex-shrink: 0;
+}
+
+ul {
+    padding-left: 0;
+}
+
+ul>li {
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    padding: 0;
+    margin: 0;
+}
+
+button,
+input {
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+
+// -----
+
+
