--- a/src/app/pages/buttons/buttons.component.html
+++ b/src/app/pages/buttons/buttons.component.html
@@ -1,1 +1,93 @@
-<p>buttons works!</p>
+
+<mat-grid-list cols="5" rowHeight="54rem" role="list" >
+
+    <mat-grid-tile colspan="1" ></mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="1" >
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Buttons</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <button mat-button>mat-button</button>
+                <button mat-raised-button>raised-button</button>
+                <button mat-flat-button>flat-button</button>
+                <button mat-stroked-button>Basic</button>
+                <button mat-stroked-button color="primary">Primary</button>
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+            <mat-card-header>
+                <mat-card-title>Buttons with colors</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <button color='primary' mat-button>primary</button>
+                <button color='accent' mat-button>accent</button>
+                <button color='warn' disableRipple mat-button>warn</button>
+                <button color='primary' mat-raised-button>raised-button</button>
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+            <mat-card-header>
+                <mat-card-title>Other buttons</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <button mat-icon-button><mat-icon>open_in_new</mat-icon></button>
+                <button mat-fab>fab</button>
+                <button mat-mini-fab>mini-fab</button>
+            </mat-card-content>
+    
+        </mat-card>
+    </mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="2">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Buttons</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <code class="code">
+                    <div style="height: 2.1rem;" *ngFor="let button of buttons">
+                        {{button}}
+                    </div>
+                </code>
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+            <mat-card-header>
+                <mat-card-title>Buttons with colors</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <code  class="code">
+                    <div  style="height: 2.04rem" *ngFor="let button of buttonsWithColors">
+                        {{button}}
+                    </div>
+                </code>
+            </mat-card-content>
+
+            <mat-divider></mat-divider>
+            <mat-card-header>
+                <mat-card-title>Other buttons</mat-card-title>
+            </mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content style="padding-bottom: 5rem;">
+                <code class="code">
+                    <div  style="height: 2.1rem" *ngFor="let button of otherButtons">
+                        {{button}}
+                    </div>
+                </code>
+                <mat-divider></mat-divider>
+                <p style="text-align: center;width: 30rem;">Choose your icon: <a href="https://fonts.google.com/icons" target="_blank">here</a> (https://fonts.google.com/icons); pick one and find "Inserting the icon" block</p>
+            </mat-card-content>
+    
+        </mat-card>
+    </mat-grid-tile>
+    
+</mat-grid-list>
+
+
