--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -28,9 +28,10 @@
     </mat-sidenav>
   
     <mat-sidenav-content >
-      <div *ngIf="!element">Show this while nothing is chosen</div>
-      <ng-container *ngComponentOutlet="(element)" ></ng-container>
-
+      <!-- <div *ngIf="!element">Show this while nothing is chosen</div> -->
+      <!-- <ng-container *ngComponentOutlet="(element)" ></ng-container> -->
+     <app-chips></app-chips>
+     <!-- <app-buttons></app-buttons> -->
     </mat-sidenav-content>
   
 </mat-sidenav-container>
