--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,17 +1,12 @@
 
-
 mat-sidenav-container{
-    height: calc(205vh - 113vh)
+    height: 91.5vh
 }
 
 mat-sidenav{
     width: 200px;
     background-color: #eee;
 }
-
-// mat-sidenav-content *{
-//     pointer-events: none;
-// }
 
 a {
     text-decoration: none;
@@ -20,3 +15,4 @@ a {
 h4{
  margin: 0 auto;
 }
+
