--- a/src/app/pages/chips/chips.component.html
+++ b/src/app/pages/chips/chips.component.html
@@ -1,1 +1,141 @@
-<p>chips works!</p>
+<mat-grid-list cols="9" rowHeight="500rem" role="list" >
+
+    <mat-grid-tile colspan="1"></mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="3">
+        <mat-card>
+            <mat-card-header>Chips basics (horizontal)</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <mat-label>This is mat-label (optional).these are options:</mat-label>
+                <mat-chip-listbox>
+                    <mat-chip-option color="warn" selected>this you can select</mat-chip-option>
+                    <mat-chip>this you cannot</mat-chip>
+                    <mat-chip disabled>this is disabled</mat-chip>
+                </mat-chip-listbox>
+            </mat-card-content>
+
+            <mat-card-header>Stacked chips (vertical)</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content style="width: 50%; margin: 0 auto">
+                <mat-chip-listbox class="mat-mdc-chip-set-stacked" aria-label="Color selection">
+                    <mat-chip-option *ngFor="let chip of stackedColors" selected [color]="chip.color">
+                      {{chip.name}}
+                    </mat-chip-option>
+                </mat-chip-listbox>
+            </mat-card-content>
+
+            <mat-card-header>Chips Drag and Drop</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content style="height:28rem">
+                <mat-chip-set
+                    class="example-chip"
+                    cdkDropList 
+                    cdkDropListOrientation="horizontal"
+                    (cdkDropListDropped)="drop($event)">
+                    <mat-chip
+                        class="example-box"
+                        cdkDrag
+                        *ngFor="let vegetable of vegetables">
+                        {{vegetable.name}}
+                    </mat-chip>
+                </mat-chip-set>
+            </mat-card-content>
+
+            <mat-card-header>Chips with input</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content >
+                <mat-form-field style="width: 100%" class="example-chip-list" appearance="fill">
+                    <mat-label>Favorite Fruits</mat-label>
+                    <mat-chip-grid #chipGrid aria-label="Enter fruits">
+                      <mat-chip-row *ngFor="let fruit of fruits"
+                                    (removed)="remove(fruit)"
+                                    [editable]="true"
+                                    (edited)="edit(fruit, $event)"
+                                    [aria-description]="'press enter to edit ' + fruit.name">
+                        {{fruit.name}}
+                        <button matChipRemove [attr.aria-label]="'remove ' + fruit.name">
+                          <mat-icon>cancel</mat-icon>
+                        </button>
+                      </mat-chip-row>
+                      <input placeholder="New fruit..."
+                             [matChipInputFor]="chipGrid"
+                             [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                             [matChipInputAddOnBlur]="addOnBlur"
+                             (matChipInputTokenEnd)="add($event)"/>
+                    </mat-chip-grid>
+                </mat-form-field>
+            </mat-card-content>
+
+        </mat-card>
+    </mat-grid-tile>
+
+    <mat-grid-tile role="listitem" colspan="4">
+        <mat-card>
+            <mat-card-header>Chips basics (horizontal)</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <ngx-codemirror
+                            [(ngModel)]="chipsBasic"
+                            [options]="{
+                            lineNumbers: true,
+                            theme: 'material',
+                            mode: 'markdown'
+                            }"
+                ></ngx-codemirror>
+            </mat-card-content>
+            
+            <mat-card-header>Stacked chips (vertical)</mat-card-header>
+            <mat-divider></mat-divider>
+            <mat-card-content>
+                <ngx-codemirror
+                            [(ngModel)]="stackedColorsTemplate"
+                            [options]="{
+                            lineNumbers: true,
+                            theme: 'material',
+                            mode: 'markdown'
+                            }"
+                ></ngx-codemirror>
+            </mat-card-content>
+  
+        <mat-card-header>Chips Drag and Drop</mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+            <ngx-codemirror
+                            [(ngModel)]="dragDropTemplate"
+                            [options]="{
+                            lineNumbers: true,
+                            theme: 'material',
+                            mode: 'markdown'
+                            }"
+                ></ngx-codemirror>
+            </mat-card-content>
+        
+
+        <mat-card-header>Chips with input</mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+            <ngx-codemirror
+                            [(ngModel)]="chipsWithInput"
+                            [options]="{
+                            lineNumbers: true,
+                            theme: 'material',
+                            mode: 'markdown'
+                            }"
+                ></ngx-codemirror>
+            </mat-card-content>
+
+
+
+
+
+
+
+        </mat-card>
+        
+    </mat-grid-tile>
+
+    <mat-grid-tile colspan="1"></mat-grid-tile>
+</mat-grid-list>
+
+
