--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,11 @@ $my-material-theme: mat.define-light-theme((
 @include mat.all-component-themes($my-material-theme);
 
 /* You can add global styles to this file, and also import other style files */
-
+@import '~codemirror/lib/codemirror.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.CodeMirror{
+  height: auto;
+}
+
