--- a/src/app/pages/chips/chips-component/chips.component.html
+++ b/src/app/pages/chips/chips-component/chips.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="9" rowHeight="130rem" role="list" >
+<mat-grid-list cols="9" rowHeight="114rem" role="list" >
 
     <mat-grid-tile colspan="1"></mat-grid-tile>
 
@@ -69,7 +69,7 @@
 
             <mat-card-header>Chips with avatar</mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="padding-bottom: 3.3rem">
                 <mat-chip-listbox aria-label="Dog selection">
                     <mat-chip>
                       <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
