--- a/src/app/pages/chips/chips-component/chips.component.scss
+++ b/src/app/pages/chips/chips-component/chips.component.scss
@@ -6,7 +6,7 @@ mat-grid-tile{
 mat-card {
     height: stretch;
     width: stretch;
-    margin-top: 3rem;
+    margin: 3rem 0 3rem 0;
 }
 
 mat-card-header{
