--- a/src/app/pages/buttons/buttons.component.scss
+++ b/src/app/pages/buttons/buttons.component.scss
@@ -7,6 +7,8 @@ mat-card {
     height: stretch;
     width: stretch;
     padding-bottom: 5rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
 }
 
 mat-card-header{
@@ -15,7 +17,7 @@ mat-card-header{
     padding-bottom: 1rem;
 };
 
-mat-card-content {
+mat-grid-tile[colspan="1"] mat-card-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -23,6 +25,11 @@ mat-card-content {
     align-items: center;
     padding-bottom: 1rem;
     min-height: 15rem;
+}
+
+mat-grid-tile[colspan="2"] mat-card-content {
+    padding: 6.5rem 1rem 6.5rem 1rem;
+
 }
 
 .choose {
