recomposed: buttonscomponents, styled: sidenav

--- a/src/app/components/buttons/buttons-component/buttons.component.html
+++ b/src/app/components/buttons/buttons-component/buttons.component.html
@@ -35,11 +35,10 @@
             </mat-card-header>
             <mat-divider></mat-divider>
             <mat-card-content>
-                <button mat-icon-button><mat-icon>open_in_new</mat-icon></button>
                 <button mat-fab>fab</button>
                 <button mat-mini-fab>mini-fab</button>
             </mat-card-content>
-    
+
         </mat-card>
     </mat-grid-tile>
 
@@ -122,16 +121,13 @@
                         ></ngx-codemirror>
                     </mat-expansion-panel>
                 </mat-accordion>
-   
-                <mat-divider></mat-divider>
-                <p class="choose">Choose your icon:
-                    <a href="https://fonts.google.com/icons" target="_blank">here</a>
-                    (https://fonts.google.com/icons); pick one and find "Inserting the icon" block
-                </p>
+
             </mat-card-content>
     
         </mat-card>
     </mat-grid-tile>
+
+    <mat-grid-tile colspan="1" ></mat-grid-tile>
     
 </mat-grid-list>
 
