--- a/src/app/components/buttons/buttontoggle/buttontoggle.component.html
+++ b/src/app/components/buttons/buttontoggle/buttontoggle.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="5" rowHeight="150rem" role="list" >
+<mat-grid-list cols="5" rowHeight="105rem" role="list" >
 
     <mat-grid-tile colspan="1" ></mat-grid-tile>
 
@@ -119,7 +119,7 @@
                 <mat-card-title>Button toggle group</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="min-height: 18rem;">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -169,7 +169,7 @@
                 <mat-card-title>Button-toggles with forms</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="min-height: 24.7rem;">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -230,7 +230,7 @@
                 <mat-card-title>Button-toggles no forms</mat-card-title>
             </mat-card-header>
             <mat-divider></mat-divider>
-            <mat-card-content>
+            <mat-card-content style="min-height: 18rem;">
                 <mat-accordion>
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
@@ -261,6 +261,7 @@
                 </mat-accordion>
             </mat-card-content>
 
+            <mat-divider></mat-divider>
 
             <mat-card-header>
                 <mat-card-title>Button toggle appearance</mat-card-title>
@@ -297,14 +298,6 @@
                 </mat-accordion>
             </mat-card-content>
 
-
-
-
-
-
-
-
-            <mat-divider></mat-divider>
         </mat-card>
 
   
