--- a/src/app/components/buttons/icons/icons.component.scss
+++ b/src/app/components/buttons/icons/icons.component.scss
@@ -22,6 +22,17 @@ mat-grid-tile[colspan="1"] mat-card-content {
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    padding-bottom: 1rem;
+    padding-top: 2rem;
     min-height: 15rem;
+}
+
+mat-grid-tile[colspan="2"] mat-card-content {
+    padding: 6.5rem 1rem 6.5rem 1rem;
+
+}
+
+.choose {
+    text-align: center;
+    width: 100%;
+    padding-top: 5rem;
 }
