--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -12,7 +12,48 @@ a {
     text-decoration: none;
 }
 
+
+h3{
+    font-weight: 500;
+}
+
 h4{
  margin: 0 auto;
+}
+
+mat-list{
+    width: 100%;
+}
+
+mat-list-item{
+    background: white;
+}
+
+.navButton{
+    width: 100%;
+    height: 100%;
+    padding-left: 1.5rem;
+}
+
+.mdc-button{
+    justify-content: flex-start;
+}
+
+mat-nav-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    & .mdc-button {
+        justify-content:center;
+    }
+} 
+
+.mdc-list {
+    padding: 0;
+}
+.mdc-list-item{
+    padding: 0;
+    margin: 0
 }
 
