--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -22,7 +22,9 @@
             </mat-expansion-panel>
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('chips')"><h3>Chips</h3></button>
-         
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('badge')"><h3>Badge</h3></button>
             </mat-list-item>
 
             <!-- 
@@ -38,8 +40,6 @@
     <mat-sidenav-content >
       <div *ngIf="!element">Show this while nothing is chosen</div>
       <ng-container *ngComponentOutlet="(element)" ></ng-container>
-    
-   
     </mat-sidenav-content>
   
 </mat-sidenav-container>
