--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -26,6 +26,12 @@
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('badge')"><h3>Badge</h3></button>
             </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('progressbar')"><h3>Progress Bar</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('progressspinner')"><h3>Progress Spinner</h3></button>
+            </mat-list-item>
 
             <!-- 
             <mat-list-item>
@@ -40,6 +46,7 @@
     <mat-sidenav-content >
       <div *ngIf="!element">Show this while nothing is chosen</div>
       <ng-container *ngComponentOutlet="(element)" ></ng-container>
+
     </mat-sidenav-content>
   
 </mat-sidenav-container>
