add (pt.1): cards, checkbox, datepicker, autocomplete

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -32,6 +32,18 @@
             <mat-list-item>
                 <button mat-button class="navButton" (click)="showElement('progressspinner')"><h3>Progress Spinner</h3></button>
             </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('cards')"><h3>Cards</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('autocomplete')"><h3>Autocomplete</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('checkbox')"><h3>Checkbox</h3></button>
+            </mat-list-item>
+            <mat-list-item>
+                <button mat-button class="navButton" (click)="showElement('datepicker')"><h3>Datepicker</h3></button>
+            </mat-list-item>
 
             <!-- 
             <mat-list-item>
